<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SF销售统计</string>

    <!-- common -->
    <string name="warning">警告</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="back">返回</string>
    <string name="add">添加</string>
    <string name="finish">完成</string>
    <string name="edit">编辑</string>
    <string name="system_error">系统正在打小差，请稍后再试</string>
    <string name="setting">设置</string>
    <string name="apply">应用</string>

    <string name="default_content_description">default_content_description</string>
    <!-- string for footer -->
    <string name="in_selling">销售中</string>
    <string name="statistics">数据统计</string>
    <string name="organizing">铺位摆设</string>

    <!-- string for IN_SELLING -->
    <string name="first_feeling">销售员</string>
    <string name="customer_characteristic">顾客特征</string>
    <string name="cargo_list">货物清单</string>
    <string name="shopping">选购</string>
    <string name="shopping_begin">开始选购</string>
    <string name="shopping_end">选购结束</string>
    <string name="end">完成</string>
	<string name="look">看</string>
	<string name="looked">已看</string>
	<string name="buy">买</string>
	<string name="buyed">已买</string>
	<string name="characteristic_not_choose">请选择 %s</string>
	<string name="edit_setting_group_first">请先编辑铺位</string>

	<!-- string for SETTING_GROUP -->
	<string name="please_select_setting_group_first">请先选用合适铺位</string>
	<string name="cargo_type">货物种类</string>	
	<string name="setting_group">铺位摆设</string>
	<string name="add_setting_group">添加铺位</string>
	<string name="delete">删除</string>
	<string name="whether_delete_setting_group">是否要删除该铺位?</string>
	<string name="add_first_feeling">添加销售</string>
	<string name="add_customer_characteristic">添加特征</string>
	<string name="unfold">展开</string>
	<string name="fold">收起</string>
	<string name="add_characteristic_item">添加新的选项</string>
	<string name="add_cargo_type">添加种类</string>
	<string name="click_to_chage_title">点击修改标题</string>
	<string name="please_input_setting_group_name">请输入铺位名称</string>
	<string name="please_input_new_first_feeling">请输入新销售员</string>
	<string name="please_input_new_cargo_type_name">请输入新商品种类</string>
	<string name="please_input_new_characteristic">请输入新的特征</string>
	<string name="please_input_new_cargo_name">请输入商品名称</string>
	<string name="characteristic_item">特征项</string>
	<string name="add_cargo">添加货物</string>
	<string name="name">名称</string>
	<string name="same_setting_group_name">重复铺位名称</string>
	<string name="same_first_feeling">重复销售员</string>
	<string name="same_characteristic">重复特征名称</string>
	<string name="same_characteristic_item">重复特征项</string>
	<string name="same_cargo_type">重复商品种类</string>
	<string name="same_cargo_name">重复商品名称</string>
	<string name="must_be_filled">不能为空</string>
	<string name="cargo_name_must_be_filled">商品名不能为空</string>
	<string name="please_add_cargo_type_first">请先添加商品种类</string>
	<string name="please_edit_your_setting_group">请定制您专属的铺位摆设,以上铺位供您参考</string>

	<!-- string for statistics -->	
	<string name="more_statistics_will_be_publish">更多统计方式，将会发布，敬请期待！</string>
	<string name="shopping_list">选购清单</string>
	<string name="cargo_rank_list">货物排行榜</string>
	<string name="rank_list">排行榜</string>
	<string name="characteristic_line">特征曲线</string>
	<string name="data_statistics">数据统计</string>
	<string name="show">显示</string>
	<string name="hide">隐藏</string>
	<string name="quantity_format">次数(%1$s):%2$d</string>
	<string name="rank_format">排行:%1$d</string>
	<string name="no_data_this_day">%1$s 没有数据</string>
	<string name="please_click_to_check_rank_list">请点击\"看\",展示\"%1$s\"为\"%2$s\"的\"看排行榜\"\n点击\"买\",展示\"%3$s\"为\"%4$s\"的\"买排行榜\"</string>
	<string name="rank_list_no_data">排行榜没有数据</string>
	<string name="please_click_to_check_characteristic_line">请点击\"看\",展示\"%1$s\"对应于\"%2$s\"的浏览曲线\n点击\"买\",展示\"%3$s\"对应于\"%4$s\"的购买曲线</string>
</resources>