<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/footer"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:paddingTop="1dp"
    android:background="@android:color/black">
		<Button
		    android:id="@+id/btnInSelling"
		    android:layout_width="0dp"
		    android:layout_height="fill_parent"
		    android:layout_weight="1"
		    android:background="@drawable/tab_selected_selector"
		    android:layout_marginRight="1dp"
		    android:text="@string/in_selling" />

		<Button
		    android:id="@+id/btnStatistics"
		    android:layout_width="0dp"
		    android:layout_height="fill_parent"
		    android:layout_weight="1"
		    android:background="@drawable/tab_selector"
		    android:layout_marginRight="1dp"
		    android:text="@string/statistics" />

		<Button
		    android:id="@+id/btnOrganizing"
		    android:layout_width="0dp"
		    android:layout_height="fill_parent"
		    android:layout_weight="1"
		    android:background="@drawable/tab_selector"
		    android:text="@string/organizing" />
</LinearLayout>