<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
	android:background="@android:color/white">

    <include
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_header_height"
        layout="@layout/ui_header" />

    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="10dp">
        <Button android:id="@+id/btnCargoRankList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/content_size"
            android:textColor="@android:color/black"
            android:text="@string/cargo_rank_list"/>
        <Button android:id="@+id/btnCharacteristicLine"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
            android:textSize="@dimen/content_size"
            android:textColor="@android:color/black"
            android:text="@string/characteristic_line"/>
        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/more_statistics_will_be_publish" />

    </LinearLayout>

    <include
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_footer_height"
        layout="@layout/ui_footer" />
</LinearLayout>