<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/activity_header_height"
        android:layout_marginBottom="1dp"
        android:background="@color/light_gray"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/first_feeling"
            android:textSize="@dimen/content_size" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/customer_characteristic"
            android:textColor="@android:color/black"
            android:textSize="@dimen/title_size" />

        <Button
            android:id="@+id/btnBeginShopping"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/shopping_begin"
            android:textSize="@dimen/content_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:layout_weight="1"
        android:background="@android:color/white"
        android:orientation="vertical" >

		<include
			layout="@layout/ui_setting_group_first_feeling"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"/>
		<include
			layout="@layout/ui_setting_group_customer_characteristic"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
		    />
		<include
			layout="@layout/ui_setting_group_cargo_type"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
		    />
		<include
			layout="@layout/ui_setting_group_cargo_list"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
		    />




    </LinearLayout>

    <include
        android:layout_width="match_parent"
        android:layout_height="@dimen/activity_footer_height"
        layout="@layout/footer" />

</LinearLayout>